// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#expand should expand irregular rhythm 1`] = `
[
  {
    "dur": 720,
    "isRest": false,
    "next": 720,
    "time": 0,
  },
  {
    "dur": 960,
    "isRest": false,
    "next": 1680,
    "time": 720,
  },
  {
    "dur": 720,
    "isRest": false,
    "next": 2400,
    "time": 1680,
  },
  {
    "dur": 480,
    "isRest": false,
    "next": 2880,
    "time": 2400,
  },
  {
    "dur": 720,
    "isRest": false,
    "next": 3600,
    "time": 2880,
  },
  {
    "dur": 960,
    "isRest": false,
    "next": 4560,
    "time": 3600,
  },
  {
    "dur": 720,
    "isRest": false,
    "next": 5280,
    "time": 4560,
  },
  {
    "dur": 480,
    "isRest": false,
    "next": 5760,
    "time": 5280,
  },
  {
    "dur": 720,
    "isRest": false,
    "next": 6480,
    "time": 5760,
  },
  {
    "dur": 960,
    "isRest": false,
    "next": 7440,
    "time": 6480,
  },
  {
    "dur": 720,
    "isRest": false,
    "next": 8160,
    "time": 7440,
  },
]
`;

exports[`#expand should expand late starter simple 1`] = `
[
  {
    "dur": 1440,
    "isRest": false,
    "midi": 69,
    "next": 5280,
    "note": "A3",
    "time": 3840,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 71,
    "next": 5760,
    "note": "B3",
    "time": 5280,
  },
  {
    "dur": 1440,
    "isRest": false,
    "midi": 69,
    "next": 7200,
    "note": "A3",
    "time": 5760,
  },
  {
    "dur": 480,
    "isRest": false,
    "midi": 71,
    "next": 7680,
    "note": "B3",
    "time": 7200,
  },
]
`;

exports[`#expand should expand simple 1`] = `
[
  {
    "dur": 720,
    "isRest": false,
    "next": 720,
    "time": 0,
  },
  {
    "dur": 960,
    "isRest": false,
    "next": 1680,
    "time": 720,
  },
  {
    "dur": 720,
    "isRest": false,
    "next": 2400,
    "time": 1680,
  },
  {
    "dur": 1440,
    "isRest": false,
    "next": 3840,
    "time": 2400,
  },
  {
    "dur": 720,
    "isRest": false,
    "next": 4560,
    "time": 3840,
  },
  {
    "dur": 960,
    "isRest": false,
    "next": 5520,
    "time": 4560,
  },
  {
    "dur": 720,
    "isRest": false,
    "next": 6240,
    "time": 5520,
  },
  {
    "dur": 1440,
    "isRest": false,
    "next": 7680,
    "time": 6240,
  },
]
`;
